--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,11 @@ anthropic
 # HTTP Client
 httpx
 
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
 # Caching
 redis
 
