--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.25
 psycopg2-binary
 alembic==1.13.1
+supabase
 
 # Validation
 pydantic
@@ -20,6 +21,7 @@ ollama
 
 # HTTP Client
 httpx
+requests
 
 # Authentication
 python-jose[cryptography]==3.3.0
