--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,7 +25,8 @@ requests
 
 # Authentication
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==4.0.1
 python-multipart==0.0.6
 
 # Caching
